--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <title>Teenage Mutant Ninja Turtles</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Super Galactic Age Calculator</h1>
+          <form id="calculatorForm">
+            <div class="form-group">
+              <label for="birthday">Enter your birthday to calculate your age on different planets.</label>
+              <input id="birthday" type="date" name="birthday">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
+    <div id="results">
+      <h3>Earth</h3>
+      <p>On Earth, you are <span id="EarthAge"></span> years old.</p>
+      <p><span id="EarthExpectancy"></span></p>
+
+      <h3>Mercury</h3>
+      <p>On Mercury, you are <span id="MercuryAge"></span> years old.</p>
+      <p><span id="MercuryExpectancy"></span></p>
+
+      <h3>Venus</h3>
+      <p>On Venus, you are <span id="VenusAge"></span> years old.</p>
+      <p><span id="VenusExpectancy"></span></p>
+
+      <h3>Mars</h3>
+      <p>On Mars, you are <span id="MarsAge"></span> years old.</p>
+      <p><span id="MarsExpectancy"></span></p>
+
+      <h3>Jupiter</h3>
+      <p>On Jupiter, you are <span id="JupiterAge"></span> years old.</p>
+      <p><span id="JupiterExpectancy"></span></p>
+    </div>
 
   </body>
 </html>
