--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <meta charset="utf-8">
-    <title>Teenage Mutant Ninja Turtles</title>
+    <title>Super Galactic Age Calculator</title>
   </head>
   <body>
     <div class="container">
